<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="11.7dp"
            android:elevation="5dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <ImageView
                    android:contentDescription="@string/photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:id="@+id/img"
                    android:src="@drawable/ic_img"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:text="@string/title_product"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="14sp"
                    android:paddingStart="12.5dp"
                    android:paddingEnd="5dp"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="5dp"
                    android:id="@+id/name"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/addr_product"
                    android:layout_marginStart="5dp"
                    android:paddingStart="12.5dp"
                    android:paddingEnd="5dp"
                    android:layout_marginEnd="5dp"
                    android:id="@+id/description"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="13.5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="6.7dp"
                    android:paddingStart="12.5dp"
                    android:paddingEnd="5dp">
                <RatingBar
                        style="?android:attr/ratingBarStyleSmall"
                        android:stepSize="0.1"
                        android:id="@+id/rate"
                        android:progressTint="#f15421"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:focusable="true"
                        android:rating="4"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8.6dp"
                        android:textSize="12sp"
                        android:id="@+id/tvquantity"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>